--- a/src/styles/ios-mobile.css
+++ b/src/styles/ios-mobile.css
@@ -116,8 +116,8 @@
         position: absolute;
         top: -8px;
         bottom: -8px;
-        left: -4px;
-        right: -4px;
+        left: -2px;
+        right: -2px;
         z-index: 10;
     }
 
